--- a/build.gradle
+++ b/build.gradle
@@ -13,4 +13,8 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile 'org.apache.poi:poi:3.15'
+    compile 'commons-io:commons-io:1.3.2'
+    //Google Core Libraries for Java 更方便的使用java语言
+    compile 'com.google.guava:guava:26.0-android'
 }
